# opencv_learn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
notebook/: lec01.md
src/Eigen_learn/: eigen_demo1.cpp  eigen_demo2.cpp  eigen_demo3.cpp  eigen_demo4.cpp  geometry.cpp
src/binarization/: binarization1.cpp  binarization2.cpp
src/camera/: calibration.cpp
src/camera/calibration/: calibration.cpp
src/camera/pnp/: pnp-demo.cpp
src/camera/stereo/: stereo1.cpp
src/camera/undistortion/: undistortion.cpp  undistortion2.cpp
src/contour-detect/: canny1.cpp
src/demo/energy/: main.cpp
src/demo/transform/: main.cpp
src/extract/: channel.cpp  hsv-extract.cpp
src/filter/: filter1.cpp
src/mat/: demo1.cpp  demo2.cpp  demo3.cpp
src/slam/kalman-filter/: ekf_demo1.cpp  kalman-demo1.cpp  kalman-demo2.cpp  origin-pred.cpp
src/slam/kalman-filter/plot/: kalman1.py  kalman2.py
test/: test.cpp
